--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Index Page</h1>
     <a href="./test.html?person=john">clickme</a>
     
 </body>
