--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
     <h1>Index Page</h1>
     <a href="./test.html?person=john">clickme</a>
+    <ul>
+        <li>mango</li>
+        <li>orange</li>
+    </ul>
     
 </body>
 </html>
