--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Index Page</h1>
+    <h2>Module-2</h2>
     <a href="./test.html?person=john">clickme</a>
     <ul>
         <li>mango</li>
